<resources>
    <string name="app_name">narwhal</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_pms">PMS</string>
    <string name="title_check_in">Check in</string>
    <string name="title_check_out">Check out</string>
    <string name="title_inventory">Inventory</string>
    <string name="search_items">Search items</string>
    <string name="heading">heading</string>
    <string name="sub_heading">sub heading</string>
    <string name="press_the_trigger_to_start_scanning">Press the trigger to start scanning!</string>
    <string name="rob">ROB:</string>
    <string name="tag">tag</string>
    <string name="pic">PIC:</string>
    <string name="_0">0</string>
    <string name="tracking">Tracking</string>
    <string name="location">Location</string>
    <string name="floor">Floor:</string>
    <string name="room">Room:</string>
    <string name="value">Value</string>
    <string name="rack">Rack:</string>
    <string name="edit">Edit</string>
    <string name="scanned_qty">Scanned Qty:</string>
    <string name="checkout_qty">Checkout Qty:</string>
    <string name="inuse_qty">In-Use Qty:</string>
    <string name="save">Save</string>
    <string name="id">ID:</string>
    <string name="scanned_quantity">Scanned Qty:</string>
    <string name="inuse_quantity">In-Use:</string>
    <string name="scanned_quantity_updated">Scanned Quantity updated!</string>
    <string name="confirm">Confirm</string>
    <string name="great_job_check_in_completed">Great Job! Check in Completed</string>
    <string name="close">Close</string>
    <string name="product">Product</string>
    <string name="inventory_type">Inventory type</string>
    <string name="sn">SN</string>
    <string name="manage">Manage</string>
    <string name="add">Add</string>
    <string name="qty">Qty:</string>
    <string name="filters">Filters</string>
    <string name="room_names">Room Names</string>
    <string name="part_name">Part Name</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="add_part">Add Part</string>
    <string name="clear">Clear</string>
    <string name="tag_id">Tag ID:</string>
    <string name="quantity">Quantity:</string>
    <string name="required_info">Required Info</string>
    <string name="condition">Condition</string>
    <string name="spare_part">Spare Part</string>
    <string name="reset">Reset</string>
    <string name="item_name">Item Name</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="po_no">PO NO.- </string>
    <string name="product_name">Product Name</string>
    <string name="check_child_page">check child page</string>
    <string name="product_id">Product ID</string>
    <string name="successfully_updated">Successfully Updated!</string>
    <string name="option">Option</string>
    <string name="working_amp_replace"><![CDATA[Working & Replace:]]></string>
    <string name="start">Start</string>
    <string name="status">Status</string>
    <string name="time_period">Time Period</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="something_went_wrong_please_try_again_later">Please try again later.</string>
    <string name="n_a">N/A</string>
    <string name="spare_part_name">Spare Part Name:</string>
    <string name="area">Area:</string>
    <string name="shelf">Shelf:</string>
    <string name="box_name_optional">Box Name (Optional):</string>
    <string name="product_">Product:</string>
    <string name="choose_spare_part">Choose Spare Part</string>
    <string name="add_part_location">Add Part Location</string>
    <string name="save_location">Save Location</string>
    <string name="mid">MID:</string>
    <string name="ip_address">IP Address</string>
    <string name="change_ip_address">Change IP Address</string>
    <string name="port">Port</string>
    <string name="test_con">Test Con.</string>
    <string name="update">Update</string>
    <string name="rfid">RFID</string>
</resources>