<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_bottom_sheet_bg"
    android:orientation="vertical">

    <!-- First line/section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="17sp"
        android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Image -->
        <ImageView
            android:id="@+id/image_view"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_tracking" />

        <!-- Text -->
        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/dm_sans_medium"
            android:text="@string/tracking"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>
        <!-- Progress bar with gradient -->
        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="2sp"
            android:layout_marginEnd="20dp"
            android:max="100"
            android:minWidth="200dp"
            android:progress="0"
            android:progressDrawable="@drawable/pms_bottom_sheet_progress_bar" />
    </LinearLayout>
    <!-- Divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/extra_light_dark" />

    <!-- Second line -->
    <LinearLayout
        android:id="@+id/location_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        tools:ignore="UseCompoundDrawables">

        <!-- Image -->
        <ImageView
            android:id="@+id/location_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_location" />

        <!-- Text -->
        <TextView
            android:id="@+id/location_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/dm_sans_medium"
            android:text="@string/location"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- Third line -->
    <LinearLayout
        android:id="@+id/floor_room_rack_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="4sp"
        android:layout_marginBottom="16sp"
        android:orientation="horizontal">

        <!-- Text floor -->
        <TextView
            android:id="@+id/text_floor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_sans"
            android:text="@string/floor"
            android:textColor="@color/light_dark"
            android:textSize="11.5sp" />

        <TextView
            android:id="@+id/text_floor_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/dm_sans_medium"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="12.5sp" />

        <!-- Space -->
        <Space
            android:layout_width="10sp"
            android:layout_height="20dp" />

        <!-- Text room -->
        <TextView
            android:id="@+id/text_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_sans"
            android:text="@string/room"
            android:textColor="@color/light_dark"
            android:textSize="11.5sp" />

        <TextView
            android:id="@+id/text_room_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/dm_sans_medium"
            android:text="@string/value"
            android:maxLength="7"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="12.5sp" />

        <!-- Space -->
        <Space
            android:layout_width="10sp"
            android:layout_height="20dp" />

        <!-- Text rack -->
        <TextView
            android:id="@+id/text_rack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rack"
            android:textSize="11.5sp"
            android:textColor="@color/light_dark"
            android:fontFamily="@font/dm_sans"
            />

        <TextView
            android:id="@+id/text_rack_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/dm_sans_medium"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="12.5sp" />

        <Space
            android:layout_width="10sp"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/text_shelf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shelf"
            android:textSize="11.5sp"
            android:textColor="@color/light_dark"
            android:fontFamily="@font/dm_sans"
            />

        <TextView
            android:id="@+id/text_shelf_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/dm_sans_medium"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="12.5sp" />
    </LinearLayout>

    <!-- Divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/extra_light_dark" />

    <!-- Fourth line -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/edit_Image_view"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_edit" />

        <!-- Text -->
        <TextView
            android:id="@+id/edit_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/dm_sans_medium"
            android:text="@string/edit"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <!-- Sixth line -->
    <LinearLayout
        android:id="@+id/scanned_qty_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <!-- Text -->
        <TextView
            android:id="@+id/text_view4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_weight="1"
            android:text="@string/scanned_qty" />

        <!-- Edit text -->
        <EditText
            android:id="@+id/edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:importantForAutofill="no"
            android:inputType="number"
            app:boxStrokeWidth="0.4dp"
            tools:ignore="LabelFor,TextFields" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:id="@+id/checkout_qty_layout"
    >

        <!-- Text -->
        <TextView
            android:id="@+id/text_view5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_weight="1"
            android:text="@string/checkout_qty" />

        <!-- Edit text -->
        <EditText
            android:id="@+id/edit_text2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:importantForAutofill="no"
            android:inputType="number"
            tools:ignore="LabelFor,TextFields" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:id="@+id/inuse_qty_layout"
        android:visibility="gone"
        >

        <!-- Text -->
        <TextView
            android:id="@+id/text_view6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_weight="1"
            android:text="@string/inuse_qty" />

        <!-- Edit text -->
        <EditText
            android:id="@+id/edit_text3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:importantForAutofill="no"
            android:inputType="number"
            tools:ignore="LabelFor,TextFields" />
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100sp"
        android:layout_marginTop="25sp"
        android:layout_marginEnd="100sp"
        android:layout_marginBottom="35sp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/dm_sans_medium"
        android:stateListAnimator="@null"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

</LinearLayout>

